--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <section id="intro" class="container" aria-labelledby="intro-title">
             <h2 id="intro-title">Descubra o Seu Perfil Comportamental com o Assessment DISC</h2>
             <article class="instructions">
-                <p>O Assessment DISC é uma ferramenta que permite explorar o seu perfil comportamental, identificando como age e reage em diferentes situações. Baseado no modelo de William Moulton Marston, analisa quatro dimensões principais: <strong>Dominância</strong>, <strong>Influência</strong>, <strong>Estabilidade</strong>, e <strong>Conformidade</strong>.</p>
-                <p>Ao compreender melhor as suas forças e áreas de desenvolvimento, poderá adotar estratégias mais eficazes para melhorar a comunicação, lidar com desafios e adaptar-se a diferentes contextos.</p>
-                <p>Participar neste processo é investir no <strong>autoconhecimento</strong> e no fortalecimento das suas competências.</p>
+                <p>O Assessment DISC é uma ferramenta que permite explorar o seu perfil comportamental, identificando como age e reage em diferentes situações. Baseado no modelo de William Moulton Marston, analisa quatro dimensões principais:  <strong>Dominância</strong>, <strong>Influência</strong>, <strong>Estabilidade</strong>, e <strong>Conformidade</strong>. Este assessment oferece uma visão clara sobre os seus comportamentos e motivações.</p>
+            
+                <p>Ao compreender melhor as suas forças e áreas de desenvolvimento, poderá adotar estratégias mais eficazes para melhorar a comunicação, lidar com desafios e adaptar-se a diferentes contextos. Este é um passo essencial para quem deseja alinhar as suas ações com os seus objetivos e <strong>crescer tanto pessoal como profissionalmente</strong>.</p>
+                    
+                <p>Com insights práticos e objetivos, o DISC ajuda a identificar ambientes ideais para o seu desempenho e aponta caminhos para o <strong>desenvolvimento contínuo</strong>. Participar neste processo é <strong>investir no autoconhecimento</strong> e no <strong>fortalecimento das suas competências</strong>.</p>
             </article>
             <form id="userInfoForm" aria-label="Informações do Usuário">
                 <fieldset>
